--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bulk Email Sender</title>
+    <title>BulkMailer</title>
     <!-- Quill Rich Text Editor -->
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
@@ -475,7 +475,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>📧 Bulk Email Sender</h1>
+            <h1>📧 BulkMailer</h1>
             <p>Send personalized emails individually to multiple recipients</p>
         </div>
         
