--- a/public/terms.html
+++ b/public/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Professional Bulk Email Sender</title>
+    <title>Terms of Service - BulkMailer</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -49,7 +49,7 @@
         <p><strong>Last updated:</strong> December 28, 2024</p>
 
         <h2>1. Acceptance of Terms</h2>
-        <p>By using the Professional Bulk Email Sender application, you agree to be bound by these Terms of Service.</p>
+        <p>By using the BulkMailer application, you agree to be bound by these Terms of Service.</p>
 
         <h2>2. Description of Service</h2>
         <p>Our application allows you to:</p>
