--- a/public/privacy.html
+++ b/public/privacy.html
@@ -48,45 +48,60 @@
         <h1>Privacy Policy</h1>
         <p><strong>Last updated:</strong> December 28, 2024</p>
 
-        <h2>1. Information We Access</h2>
-        <p>Our application accesses the following information from your Google account:</p>
+        <h2>1. Information We Access and Collect</h2>
+        <p>Our application accesses and processes the following information from your Google account:</p>
         <ul>
             <li><strong>Email Address:</strong> To identify you and send emails from your account</li>
-            <li><strong>Gmail Send Permission:</strong> To send emails on your behalf</li>
+            <li><strong>Gmail Send Permission:</strong> To send emails on your behalf through Gmail's API</li>
             <li><strong>Basic Profile Information:</strong> Your name and profile picture for display purposes</li>
+            <li><strong>Email Lists:</strong> Email addresses you upload or enter manually (processed temporarily)</li>
+            <li><strong>Email Content:</strong> Subject lines and message content you compose (processed temporarily)</li>
+            <li><strong>File Attachments:</strong> Files you choose to attach to emails (processed temporarily)</li>
         </ul>
 
         <h2>2. How We Use Your Information</h2>
-        <p>We use your information solely to:</p>
+        <p>We use your information solely for the following purposes:</p>
         <ul>
-            <li>Authenticate your identity</li>
-            <li>Send emails from your Gmail account to recipients you specify</li>
-            <li>Display your name and email in the application interface</li>
+            <li><strong>Authentication:</strong> To verify your identity and provide secure access</li>
+            <li><strong>Email Sending:</strong> To send emails from your Gmail account to recipients you specify</li>
+            <li><strong>User Interface:</strong> To display your name and email in the application</li>
+            <li><strong>Service Functionality:</strong> To process email lists, compose emails, and manage attachments</li>
+        </ul>
+        <p><strong>We do not:</strong></p>
+        <ul>
+            <li>Read your existing emails or access your Gmail inbox</li>
+            <li>Store your email content or recipient lists permanently</li>
+            <li>Share your data with third parties for marketing purposes</li>
+            <li>Use your data for any purpose other than providing our service</li>
         </ul>
 
         <h2>3. Data Storage and Security</h2>
         <ul>
-            <li><strong>No Permanent Storage:</strong> We do not permanently store your emails, contacts, or personal data</li>
-            <li><strong>Session-Based:</strong> Your authentication tokens are stored only during your active session</li>
-            <li><strong>Local Processing:</strong> Email lists and attachments are processed locally and deleted after sending</li>
-            <li><strong>No Third-Party Sharing:</strong> We never share your data with third parties</li>
+            <li><strong>No Permanent Storage:</strong> We do not permanently store your emails, contacts, email lists, or personal data on our servers</li>
+            <li><strong>Session-Based Authentication:</strong> Your OAuth tokens are stored only during your active session and are automatically deleted when you log out</li>
+            <li><strong>Temporary Processing:</strong> Email lists and attachments are processed in memory and immediately deleted after sending</li>
+            <li><strong>Secure Transmission:</strong> All data is transmitted using HTTPS encryption</li>
+            <li><strong>No Third-Party Access:</strong> We never share, sell, or provide access to your data to third parties</li>
+            <li><strong>Google API Compliance:</strong> We comply with Google's API Services User Data Policy</li>
         </ul>
 
-        <h2>4. Data Retention</h2>
-        <p>We retain your data only for the duration of your active session. When you:</p>
+        <h2>4. Data Retention and Deletion</h2>
+        <p>We retain your data only for the minimum time necessary to provide our service:</p>
         <ul>
-            <li>Log out of the application</li>
-            <li>Close your browser</li>
-            <li>Session expires</li>
+            <li><strong>Session Data:</strong> Authentication tokens are deleted when you log out or your session expires</li>
+            <li><strong>Email Lists:</strong> Uploaded files are immediately deleted after processing</li>
+            <li><strong>Email Content:</strong> Message content is not stored after sending</li>
+            <li><strong>Attachments:</strong> File attachments are deleted immediately after email sending</li>
+            <li><strong>Automatic Cleanup:</strong> All temporary data is automatically purged within 24 hours</li>
         </ul>
-        <p>All your data is immediately deleted from our servers.</p>
 
-        <h2>5. Your Rights</h2>
-        <p>You have the right to:</p>
+        <h2>5. Your Rights and Controls</h2>
+        <p>You have complete control over your data:</p>
         <ul>
-            <li>Revoke access to your Google account at any time</li>
-            <li>Request deletion of any stored session data</li>
-            <li>Contact us with privacy concerns</li>
+            <li><strong>Access Control:</strong> You can revoke our access to your Google account at any time through your Google Account settings</li>
+            <li><strong>Data Deletion:</strong> You can request immediate deletion of any session data by logging out</li>
+            <li><strong>Transparency:</strong> You can contact us for information about what data we process</li>
+            <li><strong>No Tracking:</strong> We do not use cookies or tracking technologies for advertising</li>
         </ul>
 
         <h2>6. Contact Information</h2>
